--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
         <p>I'm hosted with GitHub Pages.</p>
 
+        <p>This is version 3</p>
+
         <a href='Project1.html' >Other page</a>
     </body>
 </html>
