--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="indexStyles.css">
+    </head>
+
     <body>
-        <h1>Hello World</h1>
+        <h1>Projects</h1>
 
         <p>I'm hosted with GitHub Pages.</p>
 
-        <p>This is version 3</p>
+        <p>This is version 4</p>
 
-        <a href='Project1.html' >Other page</a>
+        <a href='project1.html' >Other page</a>
     </body>
 </html>
 
