--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>    
         <link rel="stylesheet" href="indexStyles.css">
     </head>
 
@@ -9,7 +13,7 @@
 
         <p>I'm hosted with GitHub Pages.</p>
 
-        <p>This is version 4</p>
+        <p>This is version 5</p>
 
         <a href='project1.html' >Other page</a>
     </body>
