--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <p>This is version 5</p>
 
-        <a href='project1.html' >Other page</a>
+        <a href='project1/project1.html' >Other page</a>
     </body>
 </html>
 
