--- a/project1/project1.html
+++ b/project1/project1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="project1Styles.css">
 </head>
 <body>
     <p>You are now on the other page</p>
