Added styling for header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
 
     <body>
-        <h1>Projects</h1>
+        <div class = "Header">
+            <h1>Projects</h1>
+        </div>
 
         <p>I'm hosted with GitHub Pages.</p>
 
