--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>    
-        <link rel="stylesheet" href="indexStyles.css">
+        <!--<link rel="stylesheet" href="indexStyles.css"> -->
     </head>
 
     <body>
@@ -15,7 +15,7 @@
 
         <p>I'm hosted with GitHub Pages.</p>
 
-        <p>This is version 7</p>
+        <p>This is version 8</p>
 
         <a href='project1/project1.html' >Other page</a>
     </body>
