another fix for css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
 
     <body>
-        <div class = "Header">
+        <div class = "header">
             <h1>Projects</h1>
         </div>
 
         <p>I'm hosted with GitHub Pages.</p>
 
-        <p>This is version 8</p>
+        <p>This is version 9</p>
 
         <a href='project1/project1.html' >Other page</a>
     </body>
