added mini header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class = "header">
             <h1>Projects</h1>
+            <p>Select a project to view it</p>
         </div>
 
         <p>I'm hosted with GitHub Pages.</p>
